# numble

./: .env.example  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
app/: globals.css  page.tsx
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: main.rs  user.rs
front/: Dockerfile  README.md  package-lock.json  package.json  vitest.config.ts
front/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
front/app/login/: page.tsx
front/app/signup/: page.tsx
frontapp/numbleMobile/: app.json  package-lock.json  package.json
frontapp/numbleMobile/app/: login.tsx  signup.tsx
frontapp/numbleMobile/app/(tabs)/: index.tsx
