[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
bcrypt = "0.19.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
